[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scrape-hub"
version = "0.1.0"
description = "A generalized web scraping framework with Streamlit UI — supports X/Twitter, WeChat, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "hechenyu"},
]
keywords = ["scraping", "playwright", "streamlit", "twitter", "wechat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "playwright>=1.40",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
scrape-hub = "scrape_hub.__main__:main"

[tool.setuptools.packages.find]
include = ["scrape_hub*"]

[tool.ruff]
target-version = "py310"
line-length = 100
